2005-09-11 Duncan Coutts <duncan@coutts.uklinux.net>

	* cairo/cairo.package.conf.in: remove cairo-pdf.h and cairo-ps.h from
	the includes since we're not currently building the pdf/ps backends.

2005-09-10 Duncan Coutts <duncan@coutts.uklinux.net>

	* cairo/Graphics/Rendering/Cairo.hs: haddock fixes.

2005-09-09 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/Makefile: update for Gtk+ 2.8 sources

	* tools/apiGen/CodeGen.hs: small updates for Gtk+ 2.8

2005-08-30 Duncan Coutts <duncan@coutts.uklinux.net>

	* cairo/Graphics/Rendering/Cairo.hs: fix bug with allocating surfaces.

2005-08-29 Duncan Coutts <duncan@coutts.uklinux.net>

	* cairo/Graphics/Rendering/Cairo/Types.chs: merge patches from Paolo;
	move the definition of the Render monad into the Types module.

	* cairo/Graphics/Rendering/Cairo.hs: merge patches from Paolo; add
	haddock documentation for many functions.

	* demo/cairo/Drawing.hs, demo/cairo/StarAndRing.hs,
	demo/cairo/Text.hs, demo/cairo/Makefile: add cairo demos.

	* glib/System/Glib/Properties.chs: make the enum and object property
	constructor functions take the enum/object GType as an argument. This
	should make these types of properties actually work.

	* gtk/Graphics/UI/Gtk/Abstract/Container.chs,
	gtk/Graphics/UI/Gtk/Display/Image.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/OptionMenu.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/Toolbar.chs.pp,
	gtk/Graphics/UI/Gtk/Misc/Arrow.chs,
	gtk/Graphics/UI/Gtk/Multiline/TextBuffer.chs.pp,
	gtk/Graphics/UI/Gtk/Multiline/TextTag.chs.pp,
	gtk/Graphics/UI/Gtk/Scrolling/ScrolledWindow.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FileChooserButton.chs.pp,
	gtk/Graphics/UI/Gtk/Windows/Window.chs.pp: pass the appropriate
	enum/object GType as an extra argument to the property constructor.

	* Makefile.am: build the cairo Types module using -fglasgow-exts and
	exclude most other modules from the haddock docs.

	* gtk/Graphics/UI/Gtk/Cairo.chs.pp: merge patches from Paolo and